manifests/music-assistant/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant-server
  labels:
    app: music-assistant-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-assistant-server
  template:
    metadata:
      labels:
        app: music-assistant-server
    spec:
      containers:
        - name: music-assistant-server
          image: ghcr.io/music-assistant/server:latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - DAC_READ_SEARCH
            seccompProfile:
              type: Unconfined
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music/organized
              subPath: organized
          ports:
            - name: http
              protocol: TCP
              containerPort: 8095
            - name: stream
              protocol: TCP
              containerPort: 8098
          resources: {}
      hostNetwork: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-iscsi-music-assistant-server-config
        - name: music
          persistentVolumeClaim:
            claimName: pvc-nfs-music-assistant-server-music

---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-server-service
spec:
  type: ClusterIP
  selector:
    app: music-assistant-server
  ports:
    - name: http
      protocol: TCP
      port: 8095
      targetPort: http
    - name: stream
      protocol: TCP
      port: 8098
      targetPort: stream

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: music-assistant-server
  labels:
    app: music-assistant-server
spec:
  ingressClassName: nginx-private
  rules:
    - host: music-assistant.lan.stamx.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-assistant-server-service
                port:
                  name: http
  tls:
    - hosts:
        - music-assistant.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant-server
  labels:
    gateway: private
    app: music-assistant-server
spec:
  hostnames:
    - music-assistant.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: music-assistant-server-service
          port: 8095
